# alictf2025_babygame

./: Cargo.toml  LICENSE  README.md
src/: assets.rs  get_level.rs  main.rs
src/aspect/: combiner.rs  icon.rs  mod.rs  socket.rs
src/fake_res/: mod.rs
src/npc/: mod.rs  narrator.rs
src/ui/: ending_text.rs
src/ui/dialogue/: runner.rs  test.rs
src/world/map/: bed.rs
tools/: gen_flag.py  gen_num.py  gen_res.py  release.sh
